--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.2",
+    "@dbml/core": "^2.3.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "codemirror": "^5.65.0",
     "framer-motion": "^4",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-codemirror2": "^7.2.1",
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "zustand": "^3.6.8"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "@types/react-redux": "^7.1.20",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.2"
