--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "17.0.2",
-    "zustand": "^3.6.8"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
