--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.2",
-    "@dbml/core": "^2.3.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "codemirror": "^5.65.0",
-    "framer-motion": "^4",
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.8",
+    "@dbml/core": "^2.4.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "codemirror": "^5.65.3",
+    "framer-motion": "^4.1.17",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-codemirror2": "^7.2.1",
     "react-dom": "17.0.2",
-    "zustand": "^3.6.8"
+    "zustand": "^3.7.2"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.5",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
-    "@types/react-redux": "^7.1.20",
+    "@types/react-redux": "^7.1.24",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.2"
